increases the z-index of main navigation to make sure it be above all the content

--- a/sass/modules/_navigation.scss
+++ b/sass/modules/_navigation.scss
@@ -7,6 +7,7 @@
     background: white;
     box-shadow: 0 1px 4px 2px $main-color;
     transform: translateX(-250px);
+    z-index: 12;
     @include transition-time(.3s, ease-out);
 
     &--is-visible {
