--- a/style.css
+++ b/style.css
@@ -1028,6 +1028,7 @@ select {
   background: white;
   box-shadow: 0 1px 4px 2px #3fa7da;
   transform: translateX(-250px);
+  z-index: 12;
   -webkit-transition: all 0.3s ease-out;
   /* Safari and Chrome */
   -moz-transition: all 0.3s ease-out;
